# Mango

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FrameworkScheme.dia~  LICENSE.txt  README.md  README.txt  _application_8h_source.html  _assertions_8h_source.html  _asset_manager_8h_source.html  _attenuation_8h_source.html  _audio_system_8h_source.html  _base_game_8h_source.html  _base_light_component_8h_source.html  _bloom_p_s_8h_source.html  _camera_component_8h_source.html  _camera_system_8h_source.html  _cloth_8h_source.html  _components_8h_source.html  _console_system_8h_source.html  _core_2_scene_8h_source.html  _core_8h_source.html  _core_asset_manager_8h_source.html  _core_services_8h_source.html  _debug_output_g_l_8h_source.html  _deferred_rendering_8h_source.html  _directional_light_component_8h_source.html  _entity_8h_source.html  _entity_events_8h_source.html  _entry_point_8h_source.html  _event_8h_source.html  _events_8h_source.html  _font_8h_source.html  _free_camera_controller_8h_source.html  _free_look_component_8h_source.html  _free_move_component_8h_source.html  _free_pose_system_8h_source.html  _g_u_i_8h_source.html  (+274 more)
Mango/: CMakeLists.txt
Mango/assets/shaders/: Blending.vert  Deferred-Directional.frag  Deferred-Lighting.glh  Deferred-Point.frag  Forward-Light.vert  Forward-Lighting.glh  Forward-Spot.frag  GBuffer.vert  HDR_PS.frag  Picking.vert  old_Layered.frag
Mango/resources/shaders/: BillboardSprite.frag  BillboardSprite.geom  Bloom_PS.frag  DebugObjectGeometry.frag  DebugObjectGeometry.vert  DebugRendering.frag  EnviroMapping.frag  EnviroMapping.vert  FSQ.vert  Forward-Directional.frag  Forward-Point.frag  GBuffer.frag  GBuffer.vert  HDR_PS.frag  LightBillboard.frag  LightBillboard.geom  LightBillboard.vert  Omni-Shadow-Map-Gen.geom  Omni-Shadow-Map-Gen.vert  Picking.frag  Picking.vert  PickingBillboardSprite.frag  PickingBillboardSprite.geom  PickingBillboardSprite.vert  PointBillboard.frag  SSAO.frag  Shadow-Map-Gen.vert  Wireframe.frag  Wireframe.vert
Mango/src/: Mango.h  mgpch.h
Mango/src/Components/: BaseLightComponent.h  PointLightComponent.h
Mango/src/Core/: Application.cpp  Assertions.h  CoreAssetManager.cpp  CoreAssetManager.h  CoreServices.cpp  CoreServices.h  EntryPoint.h  GameObject.cpp  GameObject.h  Log.cpp  Scene.cpp
Mango/src/CoreComponents/: CameraComponent.h  DirectionalLightComponent.h  FreeLookComponent.h  FreeMoveComponent.h  ModelRendererComponent.h  PointLightComponent.h  SpotLightComponent.h  TransformComponent.h
Mango/src/CoreEngine/: Application.cpp  Application.h  Core.cpp  Core.h  CoreAssetManager.cpp  CoreAssetManager.h  CoreServices.cpp  CoreServices.h  EntryPoint.h  GameObject.cpp  GameObject.h  Prefab.h  Scene.cpp
Mango/src/CoreSystems/: AudioSystem.cpp  CameraSystem.cpp  ConsoleSystem.cpp  FreePoseSystem.cpp  FreePoseSystem.h  GUISystem.cpp  GUISystem.h  RenderingSystem.cpp  RenderingSystem.h  SceneGraphSystem.cpp  SceneGraphSystem.h
Mango/src/GUI/: Font.cpp  GUI.cpp  GUI.h
Mango/src/Helpers/: Assertions.cpp  Assertions.h
Mango/src/Rendering/: Attenuation.h  BloomPS.cpp  BloomPS.h  Cloth.cpp  Cloth.h  DeferredRendering.cpp  DeferredRendering.h  Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleEffect.cpp  ParticleEffect.h  PostprocessEffect.cpp  RenderTarget.cpp  SSAO.cpp  SSAO.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
Mango/src/Systems/: AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  ConsoleSystem.cpp  ConsoleSystem.h  FreePoseSystem.cpp  FreePoseSystem.h  GUISystem.cpp  RenderingSystem.cpp  RenderingSystem.h  SceneGraphSystem.h
Mango/src/Utilities/: DebugOutputGL.h  GeomPrimitive.cpp  GeomPrimitive.h  ShaderGlobals.h  Util.cpp  Util.h
Mango/src/Window/: Input.cpp  Input.h  Window.cpp  Window.h
Mango/src/core_components/: FreeLookComponent.h  FreeMoveComponent.h  ModelRendererComponent.h  PointLightComponent.h  SpotLightComponent.h  TransformComponent.h
Mango/src/core_engine/: Core.cpp  Core.h  CoreAssetManager.cpp  CoreAssetManager.h  CoreServices.cpp  GameObject.cpp  Scene.cpp
Mango/src/core_systems/: AudioSystem.cpp  CameraSystem.cpp  ConsoleSystem.cpp  FreePoseSystem.cpp  FreePoseSystem.h  GUISystem.cpp  GUISystem.h  RenderingSystem.cpp  RenderingSystem.h  SceneGraphSystem.cpp  SceneGraphSystem.h
Mango/src/game_logic/: BaseGame.h
Mango/src/gui/: Font.cpp  Font.h  GUI.cpp  GUI.h
Mango/src/helpers/: Assertions.cpp
Mango/src/rendering/: Attenuation.h  BloomPS.cpp  Cloth.cpp  DeferredRendering.cpp  Material.cpp  Material.h  Mesh.cpp  Model.cpp  ParticleEffect.cpp  PostprocessEffect.cpp  RenderTarget.cpp  RenderTarget.h  SSAO.cpp  Shader.cpp  Shader.h  Skybox.cpp  Texture.cpp
Mango/src/utilities/: GeomPrimitive.cpp  GeomPrimitive.h  Util.cpp  Util.h
Mango/src/window/: Input.cpp  Window.cpp  Window.h
MangoSandbox/: CMakeLists.txt
MangoSandbox/src/: MangoSanboxApp.cpp  MoveSystem.cpp  MoveSystem.h  Sandbox.cpp  Sandbox.h  TestDemo.cpp  TestDemo.h  main.cpp
MangoSandbox/src/Scenes/: TestDemo.cpp  TestDemo.h
MangoSandbox/src/Systems/: MoveSystem.cpp
MangoSandbox/src/scenes/: TestDemo.cpp  TestDemo.h
MangoSandbox/src/systems/: MoveSystem.cpp  MoveSystem.h
docs/: conf.py  (+3 more)
example_game/: CMakeLists.txt  main.cpp
example_game/scenes/: TestDemo.cpp  TestDemo.h
example_game/systems/: MoveSystem.cpp
src/: CMakeLists.txt
src/core_engine/: CoreAssetManager.cpp  CoreServices.cpp  GameObject.cpp  Scene.cpp  UIObject.cpp  VertexCore.cpp
src/core_systems/: AudioSystem.cpp  CameraSystem.cpp  ConsoleSystem.cpp  FreePoseSystem.cpp  GUISystem.cpp  RenderingSystem.cpp  SceneGraphSystem.cpp  UIRenderingSystem.cpp
src/framework/gui/: Font.cpp  GUI.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp
src/framework/rendering/: BloomPS.cpp  Cloth.cpp  DeferredRendering.cpp  Material.cpp  Mesh.cpp  Model.cpp  ParticleEffect.cpp  PostprocessEffect.cpp  RenderTarget.cpp  SSAO.cpp  Shader.cpp  Skybox.cpp  Texture.cpp
src/framework/utilities/: GeomPrimitive.cpp  Util.cpp
src/helpers/: Assertions.cpp
(+520 files in other folders)
